--- a/BndMSC/BndMSC/appsettings.json
+++ b/BndMSC/BndMSC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BndMSC-9C22C09C-6759-4428-BFA5-7EB9FACBD90D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-132PT66; Initial catalog=BndMSC; Integrated Security=false; User ID=sa; Password=1234"
   },
   "Logging": {
     "LogLevel": {
